--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,19 +11,19 @@
     <link rel="stylesheet" href="style.css">
     <title>ToDo List</title>
 </head>
+
 <body>
     <h1>todos</h1>
 
-<form id="form">
-    <input type="text" class="input" id="input"
-    placeholder="Enter Your todo" autocomplete="off">
+    <form id="form">
+        <input type="text" class="input" id="input" placeholder="Enter your todo" autocomplete="off">
 
-    <ul class="todos" id="todos">
-        <li>Sample My First Todo</li>
-        <li>Sample My Second Todo</li>
-    </ul>
-</form>
+        <ul class="todos" id="todos"></ul>
+    </form>
+
+    <small>Left click to toggle completed. <br> Right click to delete todo</small>
 
     <script src="script.js"></script>
 </body>
+
 </html>
